--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,13 +30,17 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: dist-files
-          path: |
-            dist
-            package.json
+          path: dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dost-files
+      - name: Output contents
+        run: ls -al
       - name: Deploy
         run: echo "Deploying..."
